<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context=".loadingscreen.FragmentOnboardingThree">

    <ImageView
        android:id="@+id/onboard_image_th"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="@dimen/image_margin_bottom"
        android:src="@drawable/onboard_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/onboard_text_top_3"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/onboard_text_top_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_top_margin_bottom"
        android:text="@string/onboarding_three_top"
        android:textAlignment="center"
        android:textSize="@dimen/text_top_size"
        app:layout_constraintBottom_toTopOf="@+id/onboard_text_bottom_3"
        app:layout_constraintEnd_toEndOf="@+id/onboard_image_th"
        app:layout_constraintStart_toStartOf="@+id/onboard_image_th"
        app:layout_constraintTop_toBottomOf="@+id/onboard_image_th" />

    <TextView
        android:id="@+id/onboard_text_bottom_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_three_bottom"
        android:textAlignment="center"
        android:textSize="@dimen/text_bottom_size"
        app:layout_constraintTop_toBottomOf="@id/onboard_text_top_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/onboard_text_top_3"
        app:layout_constraintStart_toStartOf="@+id/onboard_text_top_3" />

    <Button
        android:id="@+id/button_three"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>